--- a/examples/Caddyfile
+++ b/examples/Caddyfile
@@ -1,7 +1,3 @@
 droppy.your.domain {
-  proxy / 127.0.0.1:8989 {
-    websocket
-    transparent
-  }
-  timeouts none
+  reverse_proxy 127.0.0.1:8989
 }
